RegisterSale: add price field
