# doc/openapi/swagger.yml
@@ -84,7 +84,7 @@ paths:
             curl \
             -X POST \
             -H "Content-Type: application/json" \
-            -d '{"UID": "MY_CONTROLLER_UID", "Key": "ACCESS_KEY", "Pt": 0, "CheckTime": "1550391249", "ButtonId": 0}' \
+            -d '{"UID": "MY_CONTROLLER_UID", "Key": "ACCESS_KEY", "Price": 12, "Pt": 0, "CheckTime": "1550391249", "ButtonId": 0}' \
             -i \
             https://aggregation.p-factory.ru/api/v1/register/sale
   /register/error:
@@ -186,14 +186,20 @@ definitions:
       Key:
         type: "string"
         description: "Access key from RegisterControllerRequest for requests authentication"
+      Price:
+        type: "number"
+        format: "float"
+        description: "Price of the sale"
       Pt:
         type: "number"
+        format: "int32"
         description: "Type of the sale. 0 - CASH, 1 - CASHLESS"
       CheckTime:
         type: "string"
         description: "Receipt time. Should be in UNIX timestamp in UTC timezone, See http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap04.html#tag_04_16"
       ButtonId:
         description: "Button Id of the item matrix from the vending machine"
+        format: "int32"
         type: "number"
   RegisterErrorRequest:
     type: "object"
